--- a/notebooks/trees_regression.ipynb
+++ b/notebooks/trees_regression.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "1375fd0b",
    "metadata": {},
    "source": [
     "# Decision tree for regression\n",
@@ -16,6 +17,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6fa27c75",
    "metadata": {},
    "source": [
     "<div class=\"admonition note alert alert-info\">\n",
@@ -28,6 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "395437cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,6 +45,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d95f241e",
    "metadata": {},
    "source": [
     "To illustrate how decision trees are predicting in a regression setting, we\n",
@@ -52,6 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4bb76a83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,6 +69,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "721b07e7",
    "metadata": {},
    "source": [
     "Using the term \"test\" here refers to data that was not used for training.\n",
@@ -83,6 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f80998ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,6 +103,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "35fe4e03",
    "metadata": {},
    "source": [
     "We will first illustrate the difference between a linear model and a decision\n",
@@ -105,6 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2bb0a612",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,6 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6a5af1c0",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -132,6 +142,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "855c2b6a",
    "metadata": {},
    "source": [
     "On the plot above, we see that a non-regularized `LinearRegression` is able to\n",
@@ -142,6 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5239d5df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,6 +169,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "babd0ff1",
    "metadata": {},
    "source": [
     "Contrary to linear models, decision trees are non-parametric models: they do\n",
@@ -168,6 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d4ff78ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,6 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0809f5ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,6 +208,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0e70dac2",
    "metadata": {},
    "source": [
     "We see that the decision tree model does not have an *a priori* distribution\n",
@@ -207,6 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ec496ddf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,6 +235,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "02e0ca6c",
    "metadata": {},
    "source": [
     "The threshold for our feature (flipper length) is 206.5 mm. The predicted\n",
@@ -233,6 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1d0790de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,6 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fbf01510",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,6 +276,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "eb69b8e7",
    "metadata": {},
    "source": [
     "Increasing the depth of the tree will increase the number of partition and\n",
@@ -271,8 +292,21 @@
    "main_language": "python"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
