--- a/notebooks/ensemble_hist_gradient_boosting.ipynb
+++ b/notebooks/ensemble_hist_gradient_boosting.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "18ea4b1f",
    "metadata": {},
    "source": [
     "# Speeding-up gradient-boosting\n",
@@ -34,6 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7d41c771",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,6 +47,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "18f550dd",
    "metadata": {},
    "source": [
     "<div class=\"admonition note alert alert-info\">\n",
@@ -56,6 +59,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "52f16794",
    "metadata": {},
    "source": [
     "We will make a quick benchmark of the original gradient boosting."
@@ -64,6 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "984d9770",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,12 +85,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a0490d0b",
    "metadata": {},
    "outputs": [],
    "source": [
     "print(\"Gradient Boosting Decision Tree\")\n",
     "print(f\"Mean absolute error via cross-validation: \"\n",
-    "      f\"{-cv_results_gbdt['test_score'].mean():.3f} \u00b1 \"\n",
+    "      f\"{-cv_results_gbdt['test_score'].mean():.3f} ± \"\n",
     "      f\"{cv_results_gbdt['test_score'].std():.3f} k$\")\n",
     "print(f\"Average fit time: \"\n",
     "      f\"{cv_results_gbdt['fit_time'].mean():.3f} seconds\")\n",
@@ -95,6 +101,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9d306034",
    "metadata": {},
    "source": [
     "We recall that a way of accelerating the gradient boosting is to reduce the\n",
@@ -109,6 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b014afb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,6 +131,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "446af253",
    "metadata": {},
    "source": [
     "<div class=\"admonition note alert alert-info\">\n",
@@ -140,6 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "98d8dd89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,6 +158,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5ddcf438",
    "metadata": {},
    "source": [
     "After this transformation, we see that we have at most 256 unique values per\n",
@@ -158,6 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ebb524d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,12 +186,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7ab95abd",
    "metadata": {},
    "outputs": [],
    "source": [
     "print(\"Gradient Boosting Decision Tree with KBinsDiscretizer\")\n",
     "print(f\"Mean absolute error via cross-validation: \"\n",
-    "      f\"{-cv_results_gbdt['test_score'].mean():.3f} \u00b1 \"\n",
+    "      f\"{-cv_results_gbdt['test_score'].mean():.3f} ± \"\n",
     "      f\"{cv_results_gbdt['test_score'].std():.3f} k$\")\n",
     "print(f\"Average fit time: \"\n",
     "      f\"{cv_results_gbdt['fit_time'].mean():.3f} seconds\")\n",
@@ -189,6 +202,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7d72ed87",
    "metadata": {},
    "source": [
     "Here, we see that the fit time has been reduced but that the\n",
@@ -207,6 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8773351d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,12 +238,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2ef08c1c",
    "metadata": {},
    "outputs": [],
    "source": [
     "print(\"Histogram Gradient Boosting Decision Tree\")\n",
     "print(f\"Mean absolute error via cross-validation: \"\n",
-    "      f\"{-cv_results_hgbdt['test_score'].mean():.3f} \u00b1 \"\n",
+    "      f\"{-cv_results_hgbdt['test_score'].mean():.3f} ± \"\n",
     "      f\"{cv_results_hgbdt['test_score'].std():.3f} k$\")\n",
     "print(f\"Average fit time: \"\n",
     "      f\"{cv_results_hgbdt['fit_time'].mean():.3f} seconds\")\n",
@@ -238,6 +254,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d9718e20",
    "metadata": {},
    "source": [
     "The histogram gradient-boosting is the best algorithm in terms of score.\n",
@@ -251,8 +268,21 @@
    "main_language": "python"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
