--- a/notebooks/ensemble_hyperparameters.ipynb
+++ b/notebooks/ensemble_hyperparameters.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "50815354",
    "metadata": {},
    "source": [
     "# Hyperparameter tuning\n",
@@ -28,6 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f6e2376e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,6 +44,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "30ebcc5a",
    "metadata": {},
    "source": [
     "## Random forest\n",
@@ -75,6 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b9d09e2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,6 +87,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "eb3a98cd",
    "metadata": {},
    "source": [
     "We can also tune the different parameters that control the depth of each tree\n",
@@ -108,6 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d284d6a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,6 +142,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "31c776c9",
    "metadata": {},
    "source": [
     "We can observe in our search that we are required to have a large number of\n",
@@ -158,6 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2b74bd8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,6 +175,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7556dc91",
    "metadata": {},
    "source": [
     "## Gradient-boosting decision trees\n",
@@ -204,6 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "60766af7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,6 +241,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "99386029",
    "metadata": {},
    "source": [
     "\n",
@@ -250,6 +261,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e103a940",
    "metadata": {},
    "source": [
     "Now we estimate the generalization performance of the best model using the\n",
@@ -259,6 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "74d69313",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,6 +281,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3affc768",
    "metadata": {},
    "source": [
     "The mean test score in the held-out test set is slightly better than the score\n",
@@ -282,8 +296,21 @@
    "main_language": "python"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
