--- a/notebooks/parameter_tuning_grid_search.ipynb
+++ b/notebooks/parameter_tuning_grid_search.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "012b7bd0",
    "metadata": {},
    "source": [
     "# Hyperparameter tuning by grid-search\n",
@@ -13,6 +14,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b73a4f5a",
    "metadata": {},
    "source": [
     "## Our predictive model\n",
@@ -23,6 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b33682a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,6 +36,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "220ba896",
    "metadata": {},
    "source": [
     "We extract the column containing the target."
@@ -41,6 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c6f32e21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,6 +56,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9516d015",
    "metadata": {},
    "source": [
     "We drop from our data the target and the `\"education-num\"` column which\n",
@@ -60,6 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a9280934",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,6 +76,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b64927ef",
    "metadata": {},
    "source": [
     "Once the dataset is loaded, we split it into a training and testing sets."
@@ -77,6 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8e1f1c8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,6 +97,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "37e20362",
    "metadata": {},
    "source": [
     "We will define a pipeline as seen in the first module. It will handle both\n",
@@ -99,6 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9daed7ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,6 +121,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b4071ec9",
    "metadata": {},
    "source": [
     "Here we will use a tree-based model as a classifier\n",
@@ -127,6 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7c5d8e19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,6 +151,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6349f3ff",
    "metadata": {},
    "source": [
     "We then use a `ColumnTransformer` to select the categorical columns and\n",
@@ -147,6 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e8673554",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,6 +174,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "520a9732",
    "metadata": {},
    "source": [
     "Finally, we use a tree-based classifier (i.e. histogram gradient-boosting) to\n",
@@ -168,6 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "00f2191b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,6 +200,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "30519b10",
    "metadata": {},
    "source": [
     "## Tuning using a grid-search\n",
@@ -199,6 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "34d51273",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,6 +234,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ae06a1ed",
    "metadata": {},
    "source": [
     "Finally, we will check the accuracy of our model using the test set."
@@ -223,6 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "23dc5ece",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,6 +256,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c5e3e72d",
    "metadata": {},
    "source": [
     "<div class=\"admonition warning alert alert-danger\">\n",
@@ -251,6 +273,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5449e85e",
    "metadata": {},
    "source": [
     "The `GridSearchCV` estimator takes a `param_grid` parameter which defines\n",
@@ -273,6 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3f650203",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,6 +305,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "38ca90c7",
    "metadata": {},
    "source": [
     "You can know about these parameters by looking at the `best_params_`\n",
@@ -290,6 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a488191c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,6 +325,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0cb50202",
    "metadata": {},
    "source": [
     "The accuracy and the best parameters of the grid-searched pipeline are\n",
@@ -313,6 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2b919743",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,6 +351,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "94220825",
    "metadata": {},
    "source": [
     "Let us focus on the most interesting columns and shorten the parameter\n",
@@ -332,6 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3385673f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,6 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5297993e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,6 +391,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b8e21690",
    "metadata": {},
    "source": [
     "With only 2 parameters, we might want to visualize the grid-search as a\n",
@@ -373,6 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "33e1afc4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,6 +418,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8e49b354",
    "metadata": {},
    "source": [
     "We can use a heatmap representation to show the above dataframe visually."
@@ -393,6 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "69d7ba1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,6 +440,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "61dd7ca6",
    "metadata": {},
    "source": [
     "The above tables highlights the following things:\n",
@@ -429,6 +465,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9558830f",
    "metadata": {},
    "source": [
     "In this notebook we have seen:\n",
@@ -445,8 +482,21 @@
    "main_language": "python"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
